Chore: Replace `Collections.singletonList` with `List.of` and remove unused imports in option classes